add : industry-Images

--- a/Industry_category_2.html
+++ b/Industry_category_2.html
@@ -252,7 +252,7 @@
             <!-- Full-Service Restaurants (FSRs) -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Full-Service Restaurants" class="img-fluid">
+                <img src="Images/Category-2/11.webp" alt="Full-Service Restaurants" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Full-Service Restaurants (FSRs)</h5>
                   <div>
@@ -267,7 +267,7 @@
             <!-- Fine Dining Establishments -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Fine Dining Establishments" class="img-fluid">
+                <img src="Images/Category-2/12.webp" alt="Fine Dining Establishments" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Fine Dining Establishments</h5>
                   <div>
@@ -282,7 +282,7 @@
             <!-- Buffets & All-You-Can-Eat Restaurants -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Buffets & All-You-Can-Eat Restaurants" class="img-fluid">                
+                <img src="Images/Category-2/13.webp" alt="Buffets & All-You-Can-Eat Restaurants" class="img-fluid">                
                 <div class="card-body">
                   <h5 class="card-title">Buffets & All-You-Can-Eat Restaurants</h5>
                   <div>
@@ -297,7 +297,7 @@
             <!-- Bars & Nightclubs -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Bars & Nightclubs" class="img-fluid">
+                <img src="Images/Category-2/14.webp" alt="Bars & Nightclubs" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Bars & Nightclubs</h5>
                   <div>
@@ -312,7 +312,7 @@
             <!-- Catering Businesses -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Catering Businesses" class="img-fluid">                
+                <img src="Images/Category-2/15.png" alt="Catering Businesses" class="img-fluid">                
                 <div class="card-body">
                   <h5 class="card-title">Catering Businesses</h5>
                   <div>
@@ -327,7 +327,7 @@
             <!-- Restro Bars -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Restro Bars" class="img-fluid">                
+                <img src="Images/Category-2/16.webp" alt="Restro Bars" class="img-fluid">                
                 <div class="card-body">
                   <h5 class="card-title">Restro Bars</h5>
                   <div>
