--- a/Industry_category_3.html
+++ b/Industry_category_3.html
@@ -252,7 +252,7 @@
             <!-- Hotel Restaurants -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Hotel Restaurants" class="img-fluid">
+                <img src="Images/Category-3/21.webp" alt="Hotel Restaurants" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Hotel Restaurants</h5>
                   <div>
@@ -267,7 +267,7 @@
             <!-- Enterprise Chain Restaurants -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Enterprise Chain Restaurants" class="img-fluid">
+                <img src="Images/Category-3/22.webp" alt="Enterprise Chain Restaurants" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Enterprise Chain Restaurants</h5>
                   <div>
@@ -282,7 +282,7 @@
             <!-- Multi-Location Franchises -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Multi-Location Franchises" class="img-fluid">                
+                <img src="Images/Category-3/23.webp" alt="Multi-Location Franchises" class="img-fluid">                
                 <div class="card-body">
                   <h5 class="card-title">Multi-Location Franchises</h5>
                   <div>
@@ -297,7 +297,7 @@
             <!-- Ghost Kitchens & Virtual Brands -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Ghost Kitchens & Virtual Brands" class="img-fluid">
+                <img src="Images/Category-3/24.webp" alt="Ghost Kitchens & Virtual Brands" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Ghost Kitchens & Virtual Brands</h5>
                   <div>
@@ -312,7 +312,7 @@
             <!-- Corporate Cafeterias -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Corporate Cafeterias" class="img-fluid">                
+                <img src="Images/Category-3/25.png" alt="Corporate Cafeterias" class="img-fluid">                
                 <div class="card-body">
                   <h5 class="card-title">Corporate Cafeterias</h5>
                   <div>
