--- a/Industry_category_4.html
+++ b/Industry_category_4.html
@@ -252,7 +252,7 @@
             <!-- Cloud Kitchens -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Cloud Kitchens" class="img-fluid">
+                <img src="Images/Category-4/31.png" alt="Cloud Kitchens" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Cloud Kitchens</h5>
                   <div>
@@ -267,7 +267,7 @@
             <!-- Virtual Restaurants -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Virtual Restaurants" class="img-fluid">
+                <img src="Images/Category-4/32.png" alt="Virtual Restaurants" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Virtual Restaurants</h5>
                   <div>
@@ -282,7 +282,7 @@
             <!-- Meal Subscription Services -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Meal Subscription Services" class="img-fluid">                
+                <img src="Images/Category-4/33.png" alt="Meal Subscription Services" class="img-fluid">                
                 <div class="card-body">
                   <h5 class="card-title">Meal Subscription Services</h5>
                   <div>
@@ -297,7 +297,7 @@
             <!-- Delivery-Only Brands -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="Delivery-Only Brands" class="img-fluid">
+                <img src="Images/Category-4/34.png" alt="Delivery-Only Brands" class="img-fluid">
                 <div class="card-body">
                   <h5 class="card-title">Delivery-Only Brands</h5>
                   <div>
@@ -312,7 +312,7 @@
             <!-- AI-Driven Restaurants -->
             <div class="col-12 col-md-6 col-lg-4 mb-3">
               <div class="card section-card">
-                <img src="Images/industry.webp" alt="AI-Driven Restaurants" class="img-fluid">                
+                <img src="Images/Category-4/35.png" alt="AI-Driven Restaurants" class="img-fluid">                
                 <div class="card-body">
                   <h5 class="card-title">AI-Driven Restaurants</h5>
                   <div>
