--- a/Customer_App.html
+++ b/Customer_App.html
@@ -230,9 +230,9 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Customer-App</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h4 class="banner-text">Customer App</h4>  
+          <h3 class="banner-tagLine">Pickup, Delivery, Check-in, and Contactless Dine-In</h3>  
+          <h6 class="banner-desc px-0 px-md-4">Experience seamless ordering with our app—whether it's pickup, delivery, or dine-in, we ensure a hassle-free experience.</h6>
 
         </div>
       </div>
