--- a/Merchant_App.html
+++ b/Merchant_App.html
@@ -230,17 +230,15 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Merchant-App</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h4 class="banner-text">Merchant App</h4>  
+          <h3 class="banner-tagLine">Seamless Order, Cash, and Menu Management</h3>  
+          <h6 class="banner-desc px-0 px-md-4">Optimize your restaurant operations with dine-in, order management, check-in, cash handling, menu control, time tracking, reports, and KDS integration.</h6>
 
         </div>
       </div>
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
-
-    
 
 
     <!-- Footer -->
@@ -437,6 +435,7 @@
       </div>
 
     </div>
+
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
   </body>
