--- a/Merchant_Portal.html
+++ b/Merchant_Portal.html
@@ -230,9 +230,9 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Merchant-Portal</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h4 class="banner-text">Merchant Portal</h4>  
+          <h3 class="banner-tagLine">Manage Employees, Products, Offers, and Insights</h3>  
+          <h6 class="banner-desc px-0 px-md-4">Streamline your business with employee management, product catalog, happy hours, offers, and real-time reports and insights.</h6>
 
         </div>
       </div>
@@ -240,9 +240,26 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
+    <!-- Merchant Portal -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="Merchant-Portal-wrapper pt-4 pb-5">
+      <div class="container">
+        <div class="Merchant-Portal-container pt-4">
+
+          <div class="row">
+            <div class="col-12 col-lg-6">
+              <picture>
+                <img src="Images/Merchant-Portal/Group 1.png" alt="" class="img-fluid">
+              </picture>
+            </div>
+            <div class="col-12 col-lg-6"></div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
     
-
-
     <!-- Footer -->
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
     <div class="footer-wrapper">
