updated : Banner-Content

--- a/Book_demo.html
+++ b/Book_demo.html
@@ -230,9 +230,9 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Book Demo</h4>
-          <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
-          <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
+          <h4 class="banner-text">Book a Demo</h4>  
+          <h3 class="banner-tagLine">Explore Our Solutions in Action</h3>  
+          <h6 class="banner-desc px-0 px-md-4">Experience how our platform enhances operations—from customer ordering to merchant management. Schedule a live demo today!</h6>
 
         </div>
       </div>
