add : KDS ->  Employee Management

--- a/home.html
+++ b/home.html
@@ -511,7 +511,7 @@
               <div class="card">      
                 <div class="feature-container">
                   <div class="feature-image position-relative">
-                    <img src="Images/Features/Kitchen Display System.jpg" alt="" class="img-fluid"/>
+                    <img src="Images/Features/Employee_Management.jpg" alt="" class="img-fluid"/>
                     <div class="card-img-overlay">
                       <p class="overlay-text m-0 "></p>
                     </div>
@@ -519,7 +519,7 @@
                 </div>     
                 <div class="card-body d-flex justify-content-center align-items-center">
                   <a href="#">
-                    <span class="feature-name">KDS</span>
+                    <span class="feature-name">Employee Management</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
                 </div>
