--- a/Merchant_App.html
+++ b/Merchant_App.html
@@ -246,7 +246,7 @@
       <div class="container">
         <div class="Merchant-App-container pt-4">
           <!-- 1 -->
-          <div class="row align-items-center" id="OrderManagement">
+          <div class="row align-items-center" id="Order_Management">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
                 <img src="Images/Merchant-App/Order_Management.png" alt="" class="img-fluid">
@@ -268,7 +268,7 @@
             </div>
           </div>
           <!-- 2 - left -->
-          <div class="row align-items-center" id="CheckInManagement">
+          <div class="row align-items-center" id="CheckIn_Management">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -290,7 +290,7 @@
             </div>
           </div>
           <!-- 3 -->
-          <div class="row align-items-center" id="TimeManagement">
+          <div class="row align-items-center" id="Time_Management">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
                 <img src="Images/Merchant-App/Time_Management.png" alt="" class="img-fluid">
@@ -312,7 +312,7 @@
             </div>
           </div>
           <!-- 4 - left -->
-          <div class="row align-items-center" id="DigitalDineInManagement">
+          <div class="row align-items-center" id="Digital_DineInManagement">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -334,7 +334,7 @@
             </div>
           </div>
           <!-- 5 -->
-          <div class="row align-items-center" id="MenuManagement">
+          <div class="row align-items-center" id="Menu_Management">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
                 <img src="Images/Merchant-App/Menu_Management.png" alt="" class="img-fluid">
@@ -356,7 +356,7 @@
             </div>
           </div>
           <!-- 6 - left -->
-          <div class="row align-items-center" id="CashManagement">
+          <div class="row align-items-center" id="Cash_Management">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -575,6 +575,14 @@
         </div>
       </div>
 
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+
+    <!-- Page-up -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="page-up">
+      <a href="#"><i class="fa-solid fa-angle-up"></i></a>
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
