--- a/Pricing.html
+++ b/Pricing.html
@@ -53,7 +53,7 @@
     <link rel="stylesheet" href="Pricing.css" />
 
     <!-- Js File -->
-    <script src="Prcing.js" defer></script>
+    <script src="Pricing.js" defer></script>
   </head>
 
   <body>  
@@ -525,6 +525,14 @@
         </div>
       </div>
 
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+
+    <!-- Page-up -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="page-up">
+      <a href="#"><i class="fa-solid fa-angle-up"></i></a>
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
