--- a/home.html
+++ b/home.html
@@ -506,7 +506,7 @@
               </div>
             </div>
 
-            <!-- Kitchen Display System -->
+            <!-- Employee Management -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">      
                 <div class="feature-container">
