--- a/Hardware_Software.html
+++ b/Hardware_Software.html
@@ -502,6 +502,35 @@
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
+
+    <!-- Chat Bot -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="chatbot-container">
+      <button class="chatbot-toggle">
+        <i class="fa-solid fa-message"></i>
+      </button>
+      <div class="chatbot-window">
+        <div class="chatbot-header">
+          <span>ChatBot 💭</span>
+          <button class="chatbot-close">&times;</button>
+        </div>
+        <div class="chatbot-messages">
+          <div class="chatbot-message bot">Hello! How can I assist you?</div>
+        </div>
+        <div class="chatbot-footer">
+          <input
+            type="text"
+            id="chat-input"
+            class="chatbot-input"
+            placeholder="Type a message..."
+          />
+          <button id="send-btn" class="chatbot-send">
+            <i class="fa-solid fa-paper-plane"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
   </body>
 
 </html>
