--- a/Customer_App.html
+++ b/Customer_App.html
@@ -246,8 +246,8 @@
       <div class="container">
         <div class="Customer-App-container pt-4">
           <!-- 1 -->
-          <div class="row align-items-center" id="">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="">
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Employee_Management.png" alt="" class="img-fluid">
               </div>
@@ -268,7 +268,7 @@
             </div>
           </div>
           <!-- 2 - left -->
-          <div class="row align-items-center" id="">
+          <div class="row align-items-center">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -283,15 +283,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="">
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Offer_Management.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
           <!-- 3 -->
-          <div class="row align-items-center" id="">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="">
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Product_Catalog.png" alt="" class="img-fluid">
               </div>
@@ -312,7 +312,7 @@
             </div>
           </div>
           <!-- 4 - left -->
-          <div class="row align-items-center" id="">
+          <div class="row align-items-center">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -327,7 +327,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="">
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Reports_Insights.png" alt="" class="img-fluid">
               </div>
