--- a/Merchant_App.html
+++ b/Merchant_App.html
@@ -246,8 +246,8 @@
       <div class="container">
         <div class="Merchant-App-container pt-4">
           <!-- 1 -->
-          <div class="row align-items-center" id="Order_Management">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Order_Management">
               <div class="img-section">
                 <img src="Images/Merchant-App/Order_Management.png" alt="" class="img-fluid">
               </div>
@@ -268,7 +268,7 @@
             </div>
           </div>
           <!-- 2 - left -->
-          <div class="row align-items-center" id="CheckIn_Management">
+          <div class="row align-items-center">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -283,15 +283,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="CheckIn_Management">
               <div class="img-section">
                 <img src="Images/Merchant-App/Check_In_Management.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
           <!-- 3 -->
-          <div class="row align-items-center" id="Time_Management">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Time_Management">
               <div class="img-section">
                 <img src="Images/Merchant-App/Time_Management.png" alt="" class="img-fluid">
               </div>
@@ -312,7 +312,7 @@
             </div>
           </div>
           <!-- 4 - left -->
-          <div class="row align-items-center" id="Digital_DineInManagement">
+          <div class="row align-items-center">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -327,15 +327,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Digital_DineInManagement">
               <div class="img-section">
                 <img src="Images/Merchant-App/Digital_DineIn_Mangement.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
           <!-- 5 -->
-          <div class="row align-items-center" id="Menu_Management">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Menu_Management">
               <div class="img-section">
                 <img src="Images/Merchant-App/Menu_Management.png" alt="" class="img-fluid">
               </div>
@@ -356,7 +356,7 @@
             </div>
           </div>
           <!-- 6 - left -->
-          <div class="row align-items-center" id="Cash_Management">
+          <div class="row align-items-center">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -371,7 +371,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Cash_Management">
               <div class="img-section">
                 <img src="Images/Merchant-App/Cash_Management.png" alt="" class="img-fluid">
               </div>
