--- a/Merchant_Portal.html
+++ b/Merchant_Portal.html
@@ -247,8 +247,8 @@
         <div class="Customer-App-container pt-4">
 
           <!-- 1 -->
-          <div class="row align-items-center" id="Employee_Management">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Employee_Management">
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Employee_Management.png" alt="" class="img-fluid">
               </div>
@@ -269,7 +269,7 @@
             </div>
           </div>
           <!-- 2 - left -->
-          <div class="row align-items-center" id="Offer_Management">
+          <div class="row align-items-center">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -284,15 +284,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Offer_Management">
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Offer_Management.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
           <!-- 3 -->
-          <div class="row align-items-center" id="Product_Catalog">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
+          <div class="row align-items-center">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Product_Catalog">
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Product_Catalog.png" alt="" class="img-fluid">
               </div>
@@ -313,7 +313,7 @@
             </div>
           </div>
           <!-- 4 - left -->
-          <div class="row align-items-center" id="Reports_Insights">
+          <div class="row align-items-center">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -328,7 +328,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Reports_Insights>
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Reports_Insights.png" alt="" class="img-fluid">
               </div>
