--- a/home.html
+++ b/home.html
@@ -393,7 +393,7 @@
                   </div> 
                 </div>  
                 <div class="card-body d-flex justify-content-center align-items-center">
-                  <a href="#">
+                  <a href="Merchant_App.html#Digital_DineInManagement">
                     <span class="feature-name">Dine-In Management</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
@@ -413,7 +413,7 @@
                   </div> 
                 </div>     
                 <div class="card-body d-flex justify-content-center align-items-center">
-                  <a href="#">
+                  <a href="Merchant_App.html#Order_Management">
                     <span class="feature-name">Order Management</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
@@ -433,7 +433,7 @@
                   </div> 
                 </div>   
                 <div class="card-body d-flex justify-content-center align-items-center">
-                  <a href="#">
+                  <a href="Merchant_App.html#Menu_Management">
                     <span class="feature-name">Menu Management</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
@@ -453,7 +453,7 @@
                   </div> 
                 </div>     
                 <div class="card-body d-flex justify-content-center align-items-center">
-                  <a href="#">
+                  <a href="Merchant_App.html#CheckIn_Management">
                     <span class="feature-name">Check In</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
@@ -473,7 +473,7 @@
                   </div> 
                 </div>     
                 <div class="card-body d-flex justify-content-center align-items-center">
-                  <a href="#">
+                  <a href="Merchant_App.html#Time_Management">
                     <span class="feature-name">Time Management</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
@@ -493,7 +493,7 @@
                   </div> 
                 </div>     
                 <div class="card-body d-flex justify-content-center align-items-center">
-                  <a href="#">
+                  <a href="Merchant_Portal.html#Reports_Insights">
                     <span class="feature-name">Report Insights</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
@@ -513,7 +513,7 @@
                   </div> 
                 </div>     
                 <div class="card-body d-flex justify-content-center align-items-center">
-                  <a href="#">
+                  <a href="Merchant_Portal.html#Employee_Management">
                     <span class="feature-name">Employee Management</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
@@ -533,7 +533,7 @@
                   </div> 
                 </div>     
                 <div class="card-body d-flex justify-content-center align-items-center">
-                  <a href="#">
+                  <a href="Merchant_App.html#Cash_Management">
                     <span class="feature-name">Cash Management</span>
                     <i class="fa-solid fa-arrow-right-long ms-2"></i>
                   </a>
