add : Smooth Scrolling and Scroll padding top

--- a/Merchant_Portal.html
+++ b/Merchant_Portal.html
@@ -328,7 +328,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Reports_Insights>
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Reports_Insights">
               <div class="img-section">
                 <img src="Images/Merchant-Portal/Reports_Insights.png" alt="" class="img-fluid">
               </div>
