add : footer Navigation Modify : Industry Section

--- a/Customer_App.html
+++ b/Customer_App.html
@@ -345,35 +345,34 @@
         <div class="footer-container">
 
           <div class="row">
-
             <!-- 1 -->
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links">
                   <h6 class="link-heading" style="color: #E52333;">Features</h6>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Dine-In Management</a>
+                    <a href="Merchant_App.html#Digital_DineInManagement"><i class="fa-regular fa-circle-right pe-2"></i>Dine-In Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Order Management</a>
+                    <a href="Merchant_App.html#Order_Management"><i class="fa-regular fa-circle-right pe-2"></i>Order Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Menu Management</a>
+                    <a href="Merchant_App.html#Menu_Management"><i class="fa-regular fa-circle-right pe-2"></i>Menu Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Check In</a>
+                    <a href="Merchant_App.html#CheckIn_Management"><i class="fa-regular fa-circle-right pe-2"></i>Check In</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Time Management</a>
+                    <a href="Merchant_App.html#Time_Management"><i class="fa-regular fa-circle-right pe-2"></i>Time Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Report Insights</a>
+                    <a href="Merchant_Portal.html#Reports_Insights"><i class="fa-regular fa-circle-right pe-2"></i>Report Insights</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>KDS</a>
+                    <a href="Merchant_Portal.html#Employee_Management"><i class="fa-regular fa-circle-right pe-2"></i>Employee Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Cash Management</a>
+                    <a href="Merchant_App.html#Cash_Management"><i class="fa-regular fa-circle-right pe-2"></i>Cash Management</a>
                   </li>
                 </ul>
               </div>
