--- a/Pricing.html
+++ b/Pricing.html
@@ -499,58 +499,36 @@
     <div class="footer-wrapper">
       <div class="container">
         <div class="footer-container">
+
           <div class="row">
             <!-- 1 -->
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links">
-                  <h6 class="link-heading" style="color: #e52333">Features</h6>
+                  <h6 class="link-heading" style="color: #E52333;">Features</h6>
                   <li class="link d-flex align-items-center">
-                    <a href="#"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Dine-In
-                      Management</a
-                    >
+                    <a href="Merchant_App.html#Digital_DineInManagement"><i class="fa-regular fa-circle-right pe-2"></i>Dine-In Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Order
-                      Management</a
-                    >
+                    <a href="Merchant_App.html#Order_Management"><i class="fa-regular fa-circle-right pe-2"></i>Order Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Menu
-                      Management</a
-                    >
+                    <a href="Merchant_App.html#Menu_Management"><i class="fa-regular fa-circle-right pe-2"></i>Menu Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Check
-                      In</a
-                    >
+                    <a href="Merchant_App.html#CheckIn_Management"><i class="fa-regular fa-circle-right pe-2"></i>Check In</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Time
-                      Management</a
-                    >
+                    <a href="Merchant_App.html#Time_Management"><i class="fa-regular fa-circle-right pe-2"></i>Time Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Report
-                      Insights</a
-                    >
+                    <a href="Merchant_Portal.html#Reports_Insights"><i class="fa-regular fa-circle-right pe-2"></i>Report Insights</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>KDS</a
-                    >
+                    <a href="Merchant_Portal.html#Employee_Management"><i class="fa-regular fa-circle-right pe-2"></i>Employee Management</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Cash
-                      Management</a
-                    >
+                    <a href="Merchant_App.html#Cash_Management"><i class="fa-regular fa-circle-right pe-2"></i>Cash Management</a>
                   </li>
                 </ul>
               </div>
@@ -560,24 +538,15 @@
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
-                  <h6 class="link-heading" style="color: #e52333">Solutions</h6>
+                  <h6 class="link-heading" style="color: #E52333;">Solutions</h6>
                   <li class="link d-flex align-items-center">
-                    <a href="POS.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>POS
-                      System</a
-                    >
+                    <a href="POS.html"><i class="fa-regular fa-circle-right pe-2"></i>POS System</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Hardware_Software.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Hardware &
-                      Software</a
-                    >
+                    <a href="Hardware_Software.html"><i class="fa-regular fa-circle-right pe-2"></i>Hardware & Software</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Adv_integration.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Advanced
-                      Integration</a
-                    >
+                    <a href="Adv_integration.html"><i class="fa-regular fa-circle-right pe-2"></i>Advanced Integration</a>
                   </li>
                 </ul>
               </div>
@@ -587,35 +556,21 @@
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
-                  <h6 class="link-heading" style="color: #e52333">Explore</h6>
+                  <h6 class="link-heading" style="color: #E52333;">Explore</h6>
                   <li class="link d-flex align-items-center">
-                    <a href="Pricing.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Pricing</a
-                    >
+                    <a href="Pricing.html"><i class="fa-regular fa-circle-right pe-2"></i>Pricing</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_1.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Fast &
-                      Casual Eateries</a
-                    >
+                    <a href="Industry_category_1.html"><i class="fa-regular fa-circle-right pe-2"></i>Fast & Casual Eateries</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_2.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Premium &
-                      Full-Service Dining</a
-                    >
+                    <a href="Industry_category_2.html"><i class="fa-regular fa-circle-right pe-2"></i>Premium & Full-Service Dining</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_3.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i
-                      >Large-Scale Businesses</a
-                    >
+                    <a href="Industry_category_3.html"><i class="fa-regular fa-circle-right pe-2"></i>Large-Scale Businesses</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="Industry_category_4.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Emerging
-                      Restaurant Models</a
-                    >
+                    <a href="Industry_category_4.html"><i class="fa-regular fa-circle-right pe-2"></i>Emerging Restaurant Models</a>
                   </li>
                 </ul>
               </div>
@@ -625,33 +580,25 @@
             <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
-                  <h6 class="link-heading" style="color: #e52333">Resource</h6>
+                  <h6 class="link-heading" style="color: #E52333;">Resource</h6>
                   <li class="link d-flex align-items-center">
-                    <a href="about.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>About
-                      Us</a
-                    >
+                    <a href="about.html"><i class="fa-regular fa-circle-right pe-2"></i>About Us</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="https://maghil.blog/" target="_blank"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Blog</a
-                    >
+                    <a href="https://maghil.blog/" target="_blank"><i class="fa-regular fa-circle-right pe-2"></i>Blog</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="https://www.youtube.com/@magilhub4286"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>YouTube</a
-                    >
+                    <a href="https://www.youtube.com/@magilhub4286"><i class="fa-regular fa-circle-right pe-2"></i>YouTube</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="virtual_lecture.html"
-                      ><i class="fa-regular fa-circle-right pe-2"></i>Virtual
-                      Lecture</a
-                    >
+                    <a href="virtual_lecture.html"><i class="fa-regular fa-circle-right pe-2"></i>Virtual Lecture</a>
                   </li>
                 </ul>
               </div>
             </div>
+
           </div>
+
         </div>
       </div>
     </div>
